--- a/events/css/pages-events.css
+++ b/events/css/pages-events.css
@@ -742,7 +742,7 @@ only screen and (min-device-pixel-ratio : 1.5) {
 	max-width: 1200px;
 	float: left;
 }
-.img-head img{
+.img-head img, .img-subhead img{
 		padding: 10px;
 		padding-right: 20px;
 }
@@ -776,7 +776,7 @@ only screen and (min-device-pixel-ratio : 1.5) {
 height:280px;
 }*/
 
-.details a{
+.details a, .txt-head a{
 	color: #000;
 	background-color: #ffee98;
 }
@@ -792,6 +792,12 @@ a:hover {
 
 a p {
 	text-decoration: none;
+}
+
+.txt-head .date {
+	margin-top: -10px;
+	color: grey;
+	font-size: .9em;
 }
 
 
