--- a/new-site/css/header.css
+++ b/new-site/css/header.css
@@ -8,8 +8,8 @@
 	width: 100%;
 	top: 0;
 	left: 0;
-	background-color: #000;
-	color: #fff;
+	background-color: #fff;
+	color: #232323;
 	display: block;
 	font-family: 'GT-Haptik-light', sans-serif;
 	box-sizing: border-box;
@@ -17,10 +17,13 @@
     filter:alpha(opacity=80);
 	border-bottom: solid 1px #666; */
 }
-.header-logo {
+.header-logo{
 	display: inline-block;
 	width: 30px;
 	box-sizing: border-box;
+}
+.header-logo img {
+		max-width: 30px;
 }
 
 .header-links-container {
@@ -32,7 +35,7 @@
 	/*background-color:#000;*/
 }
 .header-links-container a {
-	color:#fff;
+	color:#232323;
 }
 
 .header-links-container a:link {
@@ -61,7 +64,7 @@
 }
 
 .header-links {
-	padding-bottom: 10px;
+	padding-bottom: 20px;
 	position: relative;
 }
 
@@ -69,7 +72,7 @@
 	list-style: none;
   padding: 0;
   position: absolute;
-  top: 9px;
+  top: 19px;
   left: 0;
   width: 190px;
   -webkit-box-shadow: none;
@@ -88,7 +91,7 @@
 	text-align: left;
 	padding: 5px;
 	padding-left: 10px;
-  background: #000;
+  background: #f7f7f7;
   display: block;
 	z-index:99;
 }
