--- a/new-site/css/homepage.css
+++ b/new-site/css/homepage.css
@@ -62,6 +62,7 @@ p {
   margin: 20px auto;
   font-size: .8em;
   box-shadow: 0px 3px 8px rgba(0,0,0,.2);
+  transition: .3s ease; 
 }
 
 .feature-small {
@@ -122,12 +123,14 @@ font-size: .8em;
   left: 50%;
   bottom: 0;
 }
-
+.feature-card:hover {
+box-shadow: 0px 5px 12px rgba(0,0,0,.2);
+}
 
 /* ====== Sections ====== */
 
 .section {
-  display: flex;
+  display: inline-block;
   z-index: 99;
   width: 100%;
   min-height: 100vh;
@@ -135,21 +138,33 @@ font-size: .8em;
   padding: 10vh 0;
 }
 
+.section h3{
+  font-size: 3em;
+}
+
 
 /* ====== Trips ====== */
 
-.trips .description {
-  width: 96%;
+.trips{
+  /* width:100%; */
+  padding: 0 20px;
+}
+
+.section .description {
+  width: 600px;
+  text-align: center;
+  max-width: 100%;
+  padding: 20px 20px 20px 40px;
   margin:auto;
 }
 
 .trip{
   margin:auto;
-  width: 96vw;
+  width: 100%;
   height: 100vh;
   position:relative;
   margin-bottom: 40px;
-  background-size: cover;
+  background-size: cover;p
 }
 
 .trip .details {
@@ -164,6 +179,18 @@ font-size: .8em;
 
 }
 
+/* ====== Latest Issues ====== */
+
+.section-issues{padding: 0 20px;}
+.section-issues .issue{
+  max-width: 33%;
+  display: inline-block;
+  padding-bottom: 20px;
+}
+
+.section-issues .issue img{
+  max-width: 100%;
+}
 
 /* ====== UI Elements ====== */
 
@@ -189,11 +216,21 @@ button{
     max-height: 100vh;
   }
 
+  .section-issues .issue{
+    display: block;
+    width: 400px;
+    max-width: 100%;
+    margin:auto;
+  }
+
 }
 
 @media (max-width:500px) {
   .feature-small{
     min-width: 260px;
   }
+
+}
+ }
 
 }
