--- a/new-site/css/homepage.css
+++ b/new-site/css/homepage.css
@@ -154,7 +154,7 @@ text-transform: uppercase;
   display: inline-block;
   z-index: 99;
   width: 100%;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   background-color: #f9f9f9;
   /* padding: 10vh 0; */
 }
