--- a/new-site/css/homepage.css
+++ b/new-site/css/homepage.css
@@ -211,6 +211,15 @@ text-transform: uppercase;
   font-size: .9em;
 }
 
+/* ====== Instafeed ====== */
+
+#instafeed{
+  max-width: 960px;
+  margin:auto;
+}
+
+#instafeed img {margin: 10px;max-width: 220px;}
+
 /* ====== Latest Issues ====== */
 
 .section-issues{padding: 0 20px;max-width: 960px;margin: auto;}
