--- a/new-site/css/homepage.css
+++ b/new-site/css/homepage.css
@@ -165,6 +165,10 @@ text-transform: uppercase;
   font-family: 'calendas-plus', serif;
 }
 
+.section .logo {
+  max-width: 100px;
+  margin: 10px auto 30px;
+}
 
 /* ====== Trips ====== */
 
@@ -229,9 +233,15 @@ text-transform: uppercase;
   display: inline-block;
   max-width: 50%;
   float: right;
-  padding: 70px 20px 50px;
+  padding: 70px 61px 50px;
   box-sizing: border-box;
   text-align: center;
+}
+.section-shop h3 {
+  font-family: 'GT-Haptik-Light', sans-serif;
+  text-transform: uppercase;
+  font-size: 1.6em;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 
 .section-shop .shop-info span{
@@ -256,7 +266,7 @@ text-transform: uppercase;
 
 .section-issues{padding: 0 20px;max-width: 960px;margin: 0 auto 40px;}
 .section-issues .issue{
-  max-width: 30.99%;
+  max-width: 30.9%;
   display: inline-block;
   padding: 20px 1%;
 }
