--- a/new-site/css/homepage.css
+++ b/new-site/css/homepage.css
@@ -166,7 +166,7 @@ text-transform: uppercase;
 }
 
 .section .logo {
-  max-width: 100px;
+  max-width: 60px;
   margin: 10px auto 30px;
 }
 
@@ -187,6 +187,15 @@ text-transform: uppercase;
 
 .description a:hover {
   text-decoration: underline;
+}
+
+.description h2 {
+  text-transform: uppercase;
+  letter-spacing: 5px;
+}
+
+.trips .description {
+  margin-bottom: 40px;
 }
 
 .trip{
@@ -221,7 +230,7 @@ text-transform: uppercase;
 
 /* ====== Shop ====== */
 
-.section-shop {max-width: 960px;margin: auto;background-color: #fff;}
+.section-shop {max-width: 960px;margin: auto;/* background-color: #fff; */}
 
 .section-shop img{
   /* float: left; */
@@ -355,6 +364,19 @@ button{
   width: 100%;
   display: block;
 }
+
+.section-shop img, .section-shop .shop-info {
+      width: 100%;
+      max-width: 480px;
+      display: block;
+      margin: auto;
+      float: none;
+}
+.section-shop .shop-info {
+  padding-top: 10px;
+}
+
+
 
 }
 
