--- a/new-site/css/homepage.css
+++ b/new-site/css/homepage.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'GT-Haptik-Light';
-  background-color: #f9f9f9;
+  background-color: #fff;
   font-size:16px;
 }
 
@@ -140,11 +140,11 @@ text-transform: uppercase;
   left: 50%;
   bottom: 0;
 }
-.feature-card:hover, .trip:hover {box-shadow: 0px 3px 8px rgba(0,0,0,0.1);}
+.feature-card:hover, .trip:hover {background-color: #f7f7f7;/* box-shadow: 0px 3px 8px rgba(0,0,0,0.1); */}
 
 .grid-divider{
   width: 94%;
-  border-bottom: 1px solid #e6e6e6;
+  border-bottom: 1px solid #E9EAE9;
   padding-bottom: 40px;
 }
 
@@ -155,8 +155,9 @@ text-transform: uppercase;
   z-index: 99;
   width: 100%;
   /* min-height: 100vh; */
-  background-color: #f9f9f9;
-  /* padding: 10vh 0; */
+  background-color: #fff;
+  padding: 0 0;
+  margin-top: -1px;
 }
 
 .section h3{
@@ -287,12 +288,21 @@ text-transform: uppercase;
 /* ====== Footer ====== */
 
 footer{
-  background-color: #ffffff;
+  background-color: #fff;
   width: 100%;
   padding: 1em 0;
   color: #666;
   font-size: 1.2em;
   text-align: center;
+  margin-top: -40px;
+}
+
+#social-share{
+  position: relative;
+  max-width: 960px;
+  margin: 1em auto 0;
+  border-top: 1px solid #E9EAE9;
+  padding-top: 20px;
 }
 
 
