added header link

--- a/new-site/css/header.css
+++ b/new-site/css/header.css
@@ -104,12 +104,16 @@
   visibility: visible;
 }
 
-/*.list-triangle:after{
+.link-active{
+	text-decoration: underline !important;
+}
+
+.list-triangle:after{
 	display: inline-block;
-  content: url('../images/triangle.svg');
-	width: 9px;
-	transform: translate3d(0, -1px, 0);
-}*/
+  content: url('../images/triangle-fill.svg');
+	width: 5px;
+	transform: translate3d(1px, -3px, 0);
+}
 
 /*----------- Media Queries ------------------------------------------*/
 @media (max-width:600px) {
