--- a/new-site/css/features.css
+++ b/new-site/css/features.css
@@ -47,12 +47,23 @@ img {
 .title .issue{
  font-family: 'GT-Haptik-Light';
  font-size: .6em;
+ text-transform: uppercase;
 }
 
 .title .feature{
 	font-size: 1.2em;
 	line-height: 0.8;
 }
+
+#nav .feature-links a{
+	float: right;
+	margin-top: 22px;
+	font-family: 'GT-Haptik-light';
+	text-transform: uppercase;
+	text-decoration: none;
+	font-size: .8em;
+}
+
 /*-----------PAGE NAVIGATION ---------------*/
 .pg-nav {
 	width: 100%;
@@ -83,7 +94,7 @@ img {
 	-o-transition: all 0.2s ease-in-out;
 	-ms-transition: all 0.2s ease-in-out;
 	transition: all 0.2s ease-in-out;
-	opacity: 0.6;
+	opacity: 0.7;
 	pointer-events:all;
 }
 
@@ -164,8 +175,9 @@ div.pg-box {
     /* font-weight: 300; */
 }
 
-div.pg-box-intro{
-	font-family: "GT-Haptik-light", sans-serif;
+div.pg-box-intro h3{
+	/* font-family: "GT-Haptik-light", sans-serif; */
+	font-weight: 100;
 	line-height: 1.8;
 }
 
@@ -378,6 +390,7 @@ h5{
 a{
 	color: #232323;
 	text-decoration: underline;
+	transition: all .2s ease-in-out;
 }
 
 a:hover{
@@ -385,7 +398,7 @@ a:hover{
 }
 
 a:visited{
-	color:#444;
+	/* color:#444; */
 }
 
 p {
@@ -815,8 +828,8 @@ div.pg-credits-box img {
 /*----------- MOBILE -------------*/
 @media (max-width:799px) {
 	body {
-		font-size: 16px;
-   }
+		font-size: 14px;
+		}
 
 	 div.pg-page {
     position: inherit;
@@ -937,7 +950,7 @@ div.pg-credits-box img {
 /*----------- THE REST -------------*/
 @media (min-width:1000px) {
 	body {
-		font-size: 18px;
+		font-size: 16px;
 	}
 }
 
