--- a/new-site/css/header.css
+++ b/new-site/css/header.css
@@ -17,6 +17,8 @@
 	/* opacity:0.8;
     filter:alpha(opacity=80);
 	border-bottom: solid 1px #666; */
+	/* box-shadow: 0px -1px 4px #909090; */
+	border-bottom: 1px solid #f3f3f3;
 }
 .header-logo{
 	display: inline-block;
@@ -133,5 +135,10 @@
 	margin-right: 0;
 	width:100%;
 	/*background-color:#000;*/
+	}
+
+	.header-links ul {
+		top:12px;
+
 	}
 }
