--- a/new-site/css/socialbuttons.css
+++ b/new-site/css/socialbuttons.css
@@ -88,16 +88,7 @@ a {outline: none;}
 	overflow: visible;
 }
 
-#share-label, #newsletter-label {
-
-	display: block;
-	position: relative;
-	width: 50%;
-	float: left;
-	text-align: left;
-	text-indent: 5px;
-	font-size: 0.8em;
-}
+#share-label, #newsletter-label {display: block;position: relative;width: 50%;float: left;text-align: center;text-indent: 5px;font-size: 0.8em;}
 
 #newsletter-label {
 
