--- a/new-site/css/header.css
+++ b/new-site/css/header.css
@@ -9,7 +9,7 @@
 	/* max-width: 1440px; */
 	top: 0;
 	left: 0;
-	background-color: #fff;
+	background-color: rgba(255, 255, 255, 0.96);
 	color: #232323;
 	display: block;
 	font-family: 'GT-Haptik-light', sans-serif;
