--- a/new-site/css/homepage.css
+++ b/new-site/css/homepage.css
@@ -13,6 +13,10 @@ p {
   line-height: 1.5;
 }
 
+.btm-padding{
+padding-bottom: 20px;
+}
+
 .split {
   width: 50%;
   min-height: 100vh;
@@ -24,7 +28,7 @@ p {
 }
 
 .cover {
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/city-cover.png) center no-repeat;
+  background: url(../images/city-cover.jpg) center no-repeat;
   background-size: cover;
   left: 50%;
   position: fixed;
@@ -56,6 +60,22 @@ p {
   font-family: 'GT-Haptik-Light', sans-serif;
 }
 
+/* ====== Animated Cover ====== */
+.split.cover {
+  animation-delay: .25s;
+  -webkit-animation-delay: .25s;
+}
+
+.split.content {
+  animation-delay: .75s;
+  -webkit-animation-delay: .75s;
+}
+
+.cover img{
+  animation-delay: .5s;
+  -webkit-animation-delay: .5s;
+
+}
 
 
 /* ====== Feature Cards ====== */
@@ -74,8 +94,9 @@ p {
   height: auto;
   margin: 20px auto;
   font-size: .8em;
-  /* box-shadow: 0px 3px 8px rgba(0,0,0,.2); */
+  /* box-shadow: 0px 2px 6px rgba(146, 146, 146, 0.2); */
   transition: .3s ease;
+  /* border: 1px solid rgb(241, 241, 241); */
 }
 
 .feature-small {
@@ -276,15 +297,22 @@ text-transform: uppercase;
   align-content: center;
 }
 
-#instafeed img {/* box-sizing: border-box; */padding: 10px;max-width: 220px;}
+#instafeed img {width: 100%;/* box-sizing: border-box; *//* padding: 10px; *//* width: 33%; */}
+#instafeed a{
+  margin: 5px;
+  width: calc(25% - 10px);
+  box-sizing: border-box;
+  margin-bottom: auto;
+}
 
 /* ====== Latest Issues ====== */
 
 .section-issues{padding: 0 20px;max-width: 960px;margin: 0 auto 40px;}
 .section-issues .issue{
-  max-width: 30.9%;
+  max-width: calc(33% - 12px);
   display: inline-block;
-  padding: 20px 1%;
+  padding: 20px 5px;
+  /* box-sizing: border-box; */
 }
 
 .section-issues .issue img{
@@ -352,12 +380,7 @@ button{
     width: 240px;
   }
 
-  .section-issues .issue{
-    display: block;
-    width: 400px;
-    max-width: 100%;
-    margin:auto;
-  }
+
 
 .feature-grid{
   max-width: 680px;
@@ -392,6 +415,9 @@ button{
   padding-top: 10px;
 }
 
+#instafeed a{
+  width: calc(33.33% - 10px);
+}
 
 
 }
@@ -432,11 +458,20 @@ button{
     padding-top: 2em;
   }
 
-  #instafeed img{
-    max-width: 320px;
+  .section-issues .issue{
+    display: block;
+    width: 400px;
+    max-width: 100%;
+    margin:auto;
   }
+
+  #instafeed {
+    max-width: 400px;
+  }
+
   #instafeed a {
-    margin: auto;
+    width: calc(50% - 10px);
+
   }
 
 
