--- a/new-site/css/sections.css
+++ b/new-site/css/sections.css
@@ -46,7 +46,7 @@ footer {
 
 .header-links-container a:visited {
     text-decoration: none;
-	color:#CCC;
+    /* color:#CCC; */
 }
 
 .header-links-container a:hover {
@@ -95,10 +95,10 @@ footer {
 	text-align: left;
 	padding: 5px;
 	padding-left: 10px;
-  background: #000;
-  display: block;
-  color: #fff;
-  text-shadow: 0 -1px 0 #000;
+	background: #000;
+	display: block;
+	color: #fff;
+	/* text-shadow: 0 -1px 0 #000; */
 }
 /*.header-links ul li:hover { background: #666; }*/
 .header-links:hover ul {
