--- a/new-site/css/features.css
+++ b/new-site/css/features.css
@@ -397,7 +397,7 @@ h5{
 a{
 	color: #232323;
 	/* text-decoration: underline; */
-	border-bottom: 1px solid #232323;
+	/* border-bottom: 1px solid #232323; */
 	transition: all .2s ease-in-out;
 }
 
